[gd_scene load_steps=3 format=3 uid="uid://cg7v8rmhw1qph"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_projectile"]

[sub_resource type="CircleShape2D" id="CircleShape2D_projectile"]
radius = 4.0

[node name="Projectile" type="Area2D"]
script = ExtResource("1_projectile")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_projectile")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(1, 0.8, 0, 1)
polygon = PackedVector2Array(-3, -3, 3, -3, 3, 3, -3, 3)

[node name="Trail" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 1, 1, 0.5)

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
